Jacoco configuration & db mem